// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tabs should be alternate tab with yellow border 1`] = `
<div
  class="tabs section tabs--alt"
>
  <div
    class="tabs__section max"
  >
    <div
      class="tabs__dropdown tabs__dropdown--mobile"
    >
      <!---->
       
      <div
        class="tabs__dropdown-select"
      >
        <!---->
      </div>
    </div>
     
    <div
      class="tabs__tablist tabs__tablist--alt tabs__tablist--yellow"
      role="tablist"
    />
  </div>
   
  <div
    class="tabs__section"
    tabindex="0"
  />
</div>
`;

exports[`Tabs should match snapshot 1`] = `
<div
  class="tabs section"
>
  <div
    class="tabs__section max"
  >
    <div
      class="tabs__dropdown tabs__dropdown--mobile"
    >
      <!---->
       
      <div
        class="tabs__dropdown-select"
      >
        <!---->
      </div>
    </div>
     
    <div
      class="tabs__tablist"
      role="tablist"
    />
  </div>
   
  <div
    class="tabs__section"
    tabindex="0"
  />
</div>
`;
